# EsViritu

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
assets/: sparks-fonts.css
docs/: custom-database.md  data-directory.md  esviritu-usage.md  index.md  installation.md  interpretting-outputs.md  notable-changes.md  pipeline-description.md
docs/schematic/: pipeline_schematic_v1.0.0.ai  pipeline_schematic_v1.3.0.ai
environment/: EsViritu.yml
schematic/: pipeline_schematic.ai
scripts/: Consensuses_vs_Refs_comparison.R  EsViritu_general.sh  EsViritu_general_reactable1.R  anicalc.py  make_reactable_batch_of_samples1.R  run_EsViritu.py
src/: EsViritu.py  EsViritu_general.sh  EsViritu_general_reactable1.R  __init__.py  check_R_libraries1.R  make_reactable_batch_of_samples1.R  make_summary_batch_of_samples1.sh  run_EsViritu.py
src/EsViritu/: EsViritu.py  EsViritu_general.sh  EsViritu_general_reactable1.R  EsViritu_project_reactable.R  __init__.py  check_R_libraries1.R  esv_combine_tax.py  esv_create_taxonomy.py  esv_funcs.py  make_reactable_batch_of_samples1.R  other_funcs.py  pytaxonkit_script_instructions.md  report_funcs.py  summarize_esv_runs.py
src/EsViritu/dataui_vendored/: ATTRIBUTION.md  DESCRIPTION  NAMESPACE
src/EsViritu/dataui_vendored/R/: dataui_sparklines.R
src/EsViritu/fonts/: OFL.txt
src/EsViritu/utils/: timing.py
