[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EsViritu"
version = "1.0.3"
authors = [
  { name="Mike Tisza", email="michael.tisza@gmail.com" },
]
description = "Read mapping pipeline for detection and measurement of human and animal virus pathogens from short read metagenomic environmental or clinical samples."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",    
    "polars",
    "pysam",
    "numpy",
    "pyyaml"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"EsViritu" = ["*.R"]

[project.scripts]
EsViritu = "EsViritu:esviritu"
summarize_esv_runs = "EsViritu.summarize_esv_runs:main"

[project.urls]
"Homepage" = "https://github.com/cmmr/EsViritu"
"Bug Tracker" = "https://github.com/cmmr/EsViritu/issues"